--- a/style.css
+++ b/style.css
@@ -75,3 +75,14 @@ button:hover {
     margin-left: 20px;
     font-size: 16px;
 }
+
+.btn {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+p{
+    font-size: 16px;
+line-height: 30px;
+}
